versions/1.21.4/translated/de_de/players/faq.md
---
title: Häufig gestellte Fragen für Spieler
description: Häufig gestellte Fragen für Spieler und Serveradministratoren in Bezug auf Fabric.
---

Es gibt viele Fragen, die häufig gestellt werden, deshalb haben wir hier eine Liste dieser Fragen zusammengestellt.

## Welche Minecraft Versionen werden von Fabric unterstützt? {#what-minecraft-versions-does-fabric-support}

Offiziell unterstützt Fabric alle Minecraft-Versionen, beginnend mit Snapshot `18w43b` und höher, sowie Vollversionen beginnend mit Version `1.14` und höher.

## Wo kann ich veröffentlichte Fabric-Mods herunterladen? {#where-can-i-download-published-fabric-mods}

:::info
Du solltest immer prüfen, ob Mods aus einer vertrauenswürdigen Quelle stammen. Weitere Informationen zum Finden von Mods findest du in dem Leitfaden [Vertrauenswürdige Mods finden](./finding-mods).
:::

Die meisten Autoren veröffentlichen ihre Mods auf [Modrinth](https://modrinth.com/mods?g=categories:%27fabric%27) und CurseForge, manche laden sie jedoch auch auf ihre persönliche Website oder auf andere Plattformen wie GitHub hoch.

## Wo kann ich vorgefertige Fabric-Modpacks herunterladen? {#where-can-i-find-pre-made-fabric-modpacks}

Du kannst vorgefertigte Fabric-Modpacks auf einer Vielzahl von Plattformen finden, wie beispielsweise:

- [Modrinth](https://modrinth.com/modpacks?g=categories:%27fabric%27)
- [CurseForge](https://www.curseforge.com/minecraft/search?class=modpacks&gameVersionTypeId=4)
- [Feed The Beast](https://www.feed-the-beast.com/ftb-app)
- [Technic](https://www.technicpack.net/modpacks)
